Fix grid responsiveness

--- a/_pages/about.html
+++ b/_pages/about.html
@@ -7,7 +7,9 @@ layout: default
     <div id="techs">
       <a href="https://www.oracle.com/java/" target="_blank" rel="noreferrer"><img alt="Java" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/java.svg" /></a>
       <a href="https://kotlinlang.org/" target="_blank" rel="noreferrer"><img alt="Kotlin" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/kotlin.svg" /></a>
-      <a href="https://spring.io/" target="_blank" rel="noreferrer"><img alt="Spring Boot" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/springboot.svg" /></a>
+      <a href="https://spring.io/projects/spring-boot" target="_blank" rel="noreferrer"><img alt="Spring Boot" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/springboot.svg" /></a>
+      <a href="https://spring.io/projects/spring-framework" target="_blank" rel="noreferrer"><img alt="Spring MVC" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/spring.svg" /></a>
+      <a href="https://maven.apache.org/" target="_blank" rel="noreferrer"><img alt="Apache Maven" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/apachemaven.svg" /></a>
       <a href="https://postgresql.org/" target="_blank" rel="noreferrer"><img alt="PostgreSQL" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/postgresql.svg" /></a>
       <a href="https://mongodb.com/" target="_blank" rel="noreferrer"><img alt="MongoDB" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/mongodb.svg" /></a>
       <a href="https://redis.io/" target="_blank" rel="noreferrer"><img alt="Redis" height="40" width="40" src="https://cdn.jsdelivr.net/npm/simple-icons@v6/icons/redis.svg" /></a>
