Refactor website and improve styling

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 layout: default
 ---
 
-<p>I am a software engineer, specialized in backend development within the Java Virtual Machine (JVM) Ecosystem, mainly using Java and Kotlin languages, and application frameworks such as Spring Boot, Spring MVC and Java/Jakarta EE</p>
-<p>In addition to being a programmer, I have experience as tech lead and in planning and development of software architectures that follow relevant patterns such as microservices architecture, event-driven architecture and hexagonal architecture</p>
-<p>Tools and concepts that I have extensive experience with are: Apache Kafka, RabbitMQ, Docker, Kubernetes, Git, Linux, Jenkins and other continuous integration and continuous delivery (CI/CD) tools, test-driven development (TDD) and behavior-driven development (BDD), and databases such as PostgreSQL, MySQL/MariaDB and MongoDB</p>
-<p>I am currently studying Clojure and Quarkus</p>
+<p>As a software engineer with experience in backend development, I have a strong understanding of the Java Virtual Machine (JVM) ecosystem. I have experience working with languages such as Java and Kotlin, as well as frameworks such as Spring Boot, Spring MVC, and Java/Jakarta EE. Additionally, I have experience with tools such as Apache Kafka, RabbitMQ, Docker, Kubernetes, Git, Linux, Jenkins, and databases such as PostgreSQL, MySQL/MariaDB, Oracle and MongoDB. I am familiar with test-driven development (TDD) and behavior-driven development (BDD)</p>
+<p>In addition to my technical skills, I have also had the opportunity to serve as a staff engineer, where I gained experience in planning and developing software architectures, including microservices architecture, event-driven architecture, and hexagonal architecture</p>
+<p>I  am always interested in expanding my knowledge and skills, and am currently exploring Quarkus, Gin and Golang</p>
 <p><a href="/about">Read more about my experiences and achievements at my about page</a></p>
